[fix: alignment of icons][remove background of menu]

--- a/_sass/icons.scss
+++ b/_sass/icons.scss
@@ -33,7 +33,7 @@ ul.icons a {
   padding: 0;
   font-size: 1rem;
   margin-bottom:20px;
-  text-align: center;
+  text-align: right;
 }
 
 @media screen and (max-width: 768px) {
